--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,5 @@
 [build]
-target = "x86_64-pocket-missile.json"
+target = "x86_64-pocket_missile.json"
 
 [unstable]
 build-std = ["core", "compiler_builtins"]
