--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "pocket-missile"
+name = "pocket_missile"
 version = "0.1.0"
 edition = "2021"
 
@@ -17,3 +17,7 @@ x86_64 = "0.14.2"
 test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
 test-success-exit-code = 33 # (0x10 << 1) | 1
 test-timeout = 300
+
+[[test]]
+name = "should_panic"
+harness = false
