--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 bootloader = "0.9.8"
 lazy_static = {version = "1.0", features =["spin_no_std"]}
+pc-keyboard = "0.5.0"
 pic8529 = "0.10.1"
 spin = "0.5.2"
 uart_16550 = "0.2.0"
